# CCU_INTERSHIP

./: .gitignore  .~lock.RIS_signal_processing.pdf#  1-month(summary).docx  LICENSE  README.md  learning_log.md  module_test.ipynb  pixi.toml  pyproject.toml  sim  sim_grid  simv  simv_axis  simv_tx  vivado_env
artifacts/module_vectors/: ifft_in_i.mem  input2b.mem
docs/: 1-month(summary).docx  index.html  learning_log.md
home/ashwin/Projects/CCU_INTERSHIP/rtl/vectors/: ifft_exp_i.mem  ifft_exp_q.mem  ifft_in_i.mem  ifft_in_q.mem
notebooks/: module_test.ipynb  quantization_helpers.ipynb
python/src/pyotfs/: modulation.py  system.py
rtl/: compile_ifft.sh  grid_loader.csv  sim  simv  simv_cp_remover  simv_fft_pingpong  simv_ifft  simv_ifft_pingpong  simv_isfft  simv_isfft_chain  simv_sfft_zf_pingpong  simv_tx
rtl/src/: constellation.sv  cp_inserter.sv  cp_remover.sv  fft_pingpong.sv  grid_loader.sv  ifft_pingpong.sv  isfft_pingpong.sv  qam_mapper.sv  qam_mapper_axis.sv
rtl/tb/: tb_cp_remover.sv  tb_fft_pingpong.sv  tb_grid_loader.sv  tb_ifft_pingpong.sv  tb_isfft_chain.out  tb_isfft_chain.sv  tb_otfs_tx.sv  tb_qam_mapper.sv  tb_qam_mapper_axis.sv
rtl/vectors/: dac_channel_trace.csv  ifft_cp_in_i.mem  ifft_cp_in_q.mem  ifft_in_q.mem  ifft_pingpong_exp_i.mem  ifft_pingpong_exp_q.mem  input.mem  isfft_exp_i.mem  isfft_exp_q.mem
scripts/: init.sh  vivado_env.sh
scripts/python/: Tx understanding.ipynb  quantization_helpers.ipynb
src/pyotfs/: constallation.py  ifft.py  modulation.py  system.py
src/quantlib/: quant_lib.py
vivado/otfs_rtl/: otfs_rtl.xpr
