[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "pyotfs"
version = "0.1.0"
description = "Python library for OTFS modulation and simulation."
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "Ashwin Prasanth Hariharan" }
]

license = { text = "MIT" }

keywords = [
    "otfs",
    "wireless",
    "communication",
    "dsp",
    "fpga",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=2.0",
    "scipy>=1.15",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/pyotfs",
    "src/quantlib",
]
